--- a/Moo.popBubble.css
+++ b/Moo.popBubble.css
@@ -1,14 +1,8 @@
-a, a:visited { color: #1faced; }
-html,body {
-	font-family: Lato, sans-serif;
-}
-
-
 .bubbleWrapper {
 	position: absolute;
 	font-size: .75em;
-	max-width: 300px;
-	background: #1faced;
+	max-width: 340px;
+	background: rgba(31, 172, 237, 0.95);
 	color: #fff;
 	border-radius: 3px;
 	border: none;
@@ -18,6 +12,9 @@ html,body {
 	transition: all 250ms;
 	opacity: 0;
 	transform: translateY(-10px);
+	cursor: pointer;
+	
+	z-index: 1;
 }
 .bubbleWrapper.appear {
 	opacity: 1;
@@ -30,6 +27,12 @@ html,body {
 	padding: 7px 10px 5px 10px;
 	font-weight: 300;
 }
+.bubbleWrapper > p a {
+	color: #fff;
+	font-weight: 700;
+	text-decoration: underline;
+}
+
 .bubbleWrapper > a,
 .bubbleWrapper > form button {
 	border: 0;
@@ -38,10 +41,10 @@ html,body {
 	cursor: pointer;
 	font-size: inherit;
 	color: #53585f;
-	background: #afe1ff;
-	box-shadow: 0 0 0 1px #1faced inset, 0 0 7px rgba(0, 0, 0, 0.05);
+	background: rgba(255, 255, 255, .64);
 	border-radius: 0 0 3px 3px;
 	text-decoration: none;
+	text-align: center;
 	padding: 5px 0;
 	display: block;
 	width: 100%;
@@ -66,8 +69,8 @@ html,body {
 	padding: 9px 5px;
 	border: 0;
 	margin: 0;
-	width: 240px;
-	background: #1d9fdb;
+	width: 250px;
+	background-color: rgba(44, 44, 44, .1);
 	color: #fff;
 }
 
@@ -84,6 +87,11 @@ html,body {
 	color: rgba(255, 255, 255, 0.5);
 }
 
-.bubbleWrapper > p, .bubbleWrapper > a, .bubbleWrapper > form button, .bubbleWrapper > form input {
+.bubbleWrapper strong {
 	text-align: center;
+	font-weight: 400;
+	text-transform: uppercase;
+	width: 100%;
+	display: inline-block;
+	padding-bottom: 2px;
 }
